--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,33 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED On)
 set(CMAKE_C_EXTENSIONS Off)
 set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/elibster/the_deck")
+
+project(Decky
+    VERSION 1.0.0
+    DESCRIPTION "The deck of all things learning"
+    LANGUAGES CXX C
+    HOMEPAGE_URL CMAKE_PROJECT_HOMEPAGE_URL)
+
+
+add_subdirectory(decky)
+
+target_include_directories(${PROJECT_NAME} PUBLIC decky)
+target_link_libraries(${PROJECT_NAME} PUBLIC decky)
+
+# Set up the testing environment
+include(FetchContent)
+FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+
+if (MSVC)
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+endif()
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+add_executable(decky_gtest tests/decky_gtest.cpp)
+target_link_libraries(decky_gtest decky GTest::gtest_main)
+target_include_directories(decky_gtest PUBLIC decky)
+add_test(NAME decky_gtest COMMAND decky_gtest)
