--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,14 +38,15 @@ FetchContent_Declare(
     googletest
     URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
-
 if (MSVC)
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 endif()
 FetchContent_MakeAvailable(googletest)
 
+Include(GoogleTest)
+
 enable_testing()
 add_executable(decky_gtest tests/decky_gtest.cpp)
 target_link_libraries(decky_gtest decky GTest::gtest_main)
 target_include_directories(decky_gtest PUBLIC decky)
-add_test(NAME decky_gtest COMMAND decky_gtest)
+gtest_add_tests(TARGET decky_gtest)
