--- a/decky/CMakeLists.txt
+++ b/decky/CMakeLists.txt
@@ -14,4 +14,5 @@ if (MSVC)
     include(GenerateExportHeader)
     generate_export_header(the_deck)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    target_compile_definitions(the_deck PUBLIC DLL_EXPORTS)
 endif()
