--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_EXTENSIONS Off)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED On)
 set(CMAKE_C_EXTENSIONS Off)
-set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/elibster/the_deck")
+set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/rjhansen/the_deck")
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
@@ -24,7 +24,7 @@ endif()
 
 project(The_Deck
     VERSION 1.0.0
-    DESCRIPTION "The deck of all things learning"
+    DESCRIPTION "Implements the Solitaire cryptographic algorithm."
     LANGUAGES CXX C
     HOMEPAGE_URL CMAKE_PROJECT_HOMEPAGE_URL)
 
